--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
