--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^12.23.12",
     "motion": "^12.23.12",
     "react": "^19.1.1",
-    "react-day-picker": "^9.10.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
