--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-player": "^3.3.3",
     "react-router": "^7.9.1",
+    "reactjs-popup": "^2.0.6",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
